--- a/src/app/components/video/videodetail/videodetail.component.html
+++ b/src/app/components/video/videodetail/videodetail.component.html
@@ -15,144 +15,175 @@
             <!-- end EMBED PLAYER -->
         </div>
       </div>
-
-      <div class="section introduceVideo">
-        <header class="titleVideo">
-          <h3 class="title">{{videoDetail.title}}</h3>
-        </header>
-        <div class="user_wrap clearfix">
-          <div class="user_info clearfix">
-            <a href="#" class="user_avatar">
-              <p class="thumbnail" style="background-image:url('assets/images/user.jpg') "></p>
-            </a>
-            <div class="user_meta">
-              <h4 class="user_name">
-                <a href="#">{{videoDetail.userProfile.userId}}</a>
-                <span class="vf-confirm" title="Đã xác nhận">
-                <i class="fa fa-check-square" aria-hidden="true"></i>
-                </span>
-              </h4>
-              <div class="subscription-container">
-                <button class="vf-subscription "> <!-- vf-mysubscription /class for your account -->
-                  <span class="vf-activity"> 
-                    <span class="iconFont vf-iconFladd" style="display: block">
-                      <span class="fonticons"><i class="fa fa-plus" aria-hidden="true"></i></span>			
-                    </span> 
-                    <span class="iconFont vf-iconFldone" >						 
-                      <span class="fonticons"><i class="fa fa-check" aria-hidden="true"></i></span>					
-                    </span> 
-                    <span class="iconFont vf-iconFlclear" >						
-                      <span class="fonticons"><i class="fa fa-times" aria-hidden="true"></i></span>	
-                    </span> 
-
-                    <span class="textFollow follow"> Theo dõi </span>
-                    <span class="textFollow following"> Đang theo dõi </span>
-                    <span class="textFollow disfollow"> Hủy theo dõi </span>
-                  </span> 
-                </button>
-                <span class="total-subscription">{{videoDetail.userProfile.countSubscriber}}</span>
-                <div class="wrapbox" style="display: none">
+      <div id="vf_info" class="section introduceVideo">
+          <header id="vf_info_header" class="titleVideo">
+            <h3 class="title">
+              {{videoDetail.title}}
+            </h3>
+          </header>
+          <div class="user_wrap clearfix">
+            <div *ngIf="videoDetail.userProfile;else default_user" id="vf_info_owner" class="user_info clearfix">
+              <a id="vf_info_owner_avatar" href="/channel/{{videoDetail.userProfile.userName}}" class="user_avatar">
+                <p class="thumbnail" [ngStyle]="{'background-image': 'url(' + videoDetail.userProfile.avatarUrl + ')'}"></p>
+              </a>
+              <div id="vf_info_owner_meta" class="user_meta">
+                <h4 class="user_name">
+                  <a href="/channel/{{videoDetail.userProfile.userName}}">{{videoDetail.userProfile.displayName}}</a>
+                </h4>
+                <div class="subscription-container">
+                                  <button class="vf-subscription btnFollow btnFollow-{{videoDetail.userProfile.userId}} " title="Theo dõi">
+                                    <span class="vf-activity">
+                      <!-- theo dõi  --> 	
+                                      <span class="iconFont vf-iconFladd vf-iconFladd-{{videoDetail.userProfile.userId}}" style="display: inline;">
+                          <span class="fonticons"><i class="fa fa-plus" aria-hidden="true"></i></span>	
+                      </span>
+                                      <span class="textFollow follow follow-{{videoDetail.userProfile.userId}}"> Theo dõi </span>
+  
+                      <!-- Đang theo dõi  -->
+                      <span class="iconFont vf-iconmyaccount vf-iconmyaccount-{{videoDetail.userProfile.userId}}" style="display: none;">
+                          <span class="fonticons"><i class="fa fa-check" aria-hidden="true"></i></span>
+                      </span>
+                      <!-- {{#doIf videoOwner.userId '==' currLoggedUser}}
+                        <span class="iconFont vf-iconFldone vf-iconFldone-{{videoDetail.userProfile.userId}}" style="display: inline;">
+                            <span class="fonticons"><i class="fa fa-check" aria-hidden="true"></i></span>					
+                        </span>  
+                        <span class="textFollow following following-{{videoDetail.userProfile.userId}}" style="display: inline;">Đang theo dõi</span>
+                      {{else}}
+                        <span class="iconFont vf-iconFldone vf-iconFldone-{{videoDetail.userProfile.userId}}" style="display: none;">
+                            <span class="fonticons"><i class="fa fa-check" aria-hidden="true"></i></span>					
+                        </span>  
+                        <span class="textFollow following following-{{videoDetail.userProfile.userId}}" style="display: none;">Đang theo dõi</span>
+                      {{/doIf}} -->
+  
+                      <!-- Bỏ theo dõi  -->
+                      <span class="textFollow disfollow disfollow-{{videoDetail.userProfile.userId}}" style="display: none;"> Bỏ theo dõi </span>
+                      <span class="iconFont vf-iconFlclear vf-iconFlclear-{{videoDetail.userProfile.userId}}" style="display: none;">
+                        <span class="fonticons"><i class="fa fa-times" aria-hidden="true"></i></span>	
+                      </span>										
+                    </span>
+                  </button>
+                                  <span class="total-subscription totalFollow totalFollow-{{videoDetail.userProfile.userId}}">
+                                      {{videoDetail.userProfile.countSubscriber}}
+                                  </span>
+                              </div>
+                              <div class="wrapbox">
                   <div class="arrow_box forgotLoginbox">
                     <p class="title">Bạn chưa đăng nhập?</p>
                     <p>Hãy đăng nhập để sử dụng chức năng này nhé.</p>
-                    <button class="btnLogin"> Đăng nhập</button>
+                    <button class="btnLogin btnLogin-{{videoDetail.userProfile.userId}}"> Đăng nhập</button>
                   </div>
                 </div>
-
-
               </div>
             </div>
+            <ng-template #default_user>
+              <div class="user_info clearfix">
+                <a class="user_avatar" href="http://youtube.com" >
+                <p class="thumbnail"style="background: no-repeat url(//s.ytimg.com/yts/imgbin/www-hitchhiker-vflk2_wD7.webp) -20px -487px; width: 73px; height: 30px"></p></a>
+                <div class="user_meta">
+                  <h3 class="user_name"><a href="http://youtube.com"><p class="thumbnail"style="background: no-repeat url(//s.ytimg.com/yts/imgbin/www-hitchhiker-vflk2_wD7.webp) -20px -487px; width: 73px; height: 30px"></p></a></h3>
+                  <span class="videoTotal">- video</span>
+                </div>
+              </div>
+            </ng-template>
+            <div id="vf_info_stats" class="viewer">
+              <p class="watch-count"> <span>{{videoDetail.view}}</span></p>
+              <p> lượt xem</p>
+            </div>
+            <div class="clear" ></div>
           </div>
-
-          <div class="viewer">
-            <p class="watch-count"> <span>{{videoDetail.view}}</span></p>
-            <p> Lượt xem</p>
-          </div>
-
-          <div class="clear"></div>
-        </div>
-        <div class="likeandshare">
-          <div class="videoAddpl">
-            <a class="btn-add" href="#" title="Thêm vào playlist"><span class="icon-webs addicon"></span> Thêm vào</a>
-            <div class="add-playlist">
-              <div class="arrow_box">
-                <select class="multipleSelect" multiple name="language">
-                          <option value="Justin Timberlake">Justin Timberlake</option>
-                          <option value="Today's top hits">Today's top hits</option>
-                          <option value="Coutry">Coutry</option>
-                          <option value="Pop">Pop</option>
-                          <option value="test">test</option>
-                          <option value="test1">test1</option>
-                          <option value="test2">test2</option>
-                          <option value="test3">test3</option>
-                          <option value="test4">test4</option>
-                          <option value="test5">test5</option>						                
-                          
-                      </select>
+          <div class="likeandshare">
+            <div class="videoAddpl">
+              <a class="btn-add" href="#" title="Thêm vào playlist"> <span class="icon-webs addicon"></span> Thêm vào</a>
+              
+              <div class="add-playlist wrapbox arrow_box forgotLoginbox">
+                <p class="title">Bạn chưa đăng nhập?</p>
+                <p>Hãy đăng nhập để sử dụng chức năng này nhé.</p>
+                <a class="btnLogin" href="javascript:void(0)"> Đăng nhập</a>
+              </div>
+              <div class="add-playlist wrapbox arrow_box playlist">
+                <div id="placeHolderPlaylist"></div>
+                <ul id="container">
+                </ul>
                 <div class="vf-newplaylist">
                   <button>Tạo playlist mới</button>
                 </div>
-
                 <div class="actionCustom">
                   <a class="btnClose">Đóng</a>
                   <a class="btnUpdate">Cập nhật</a>
                 </div>
               </div>
-
-              <div class="arrow_box forgotLoginbox" style="display: none">
-                <p class="title">Bạn chưa đăng nhập?</p>
-                <p>Hãy đăng nhập để sử dụng chức năng này nhé.</p>
-                <button class="btnLogin"> Đăng nhập</button>
-              </div>
-
             </div>
+            <div class="shareSocial">							
+              <a class="sharethisvideo"><span class="icon-webs shareicon"></span>Chia sẻ</a>
+              <script type="text/javascript">
+                $(document).ready(function(){
+                  $(".sharethisvideo").click(function(){
+                    if($(this).hasClass("active")) {
+                      $(this).removeClass("active");
+                      $('.share-bytools').hide();
+                    } else {
+                      $(this).addClass("active");
+                      $('.share-bytools').show();
+                    }
+                  });
+                });
+              </script>
+            </div>
+            <div class="likeActivity">
+              <p id="likeInfo_likeStatus" hidden></p>
+              <p id="likeInfo_videoId" hidden></p>
+              <a id="likeInfo_btnlike" class="btnlike" title="Thích video">
+                <span class="icon-webs likeicon" ></span>
+                <span class="totalLike">0</span>
+                <div class="wrapbox">
+                  <div class="arrow_box forgotLoginbox">
+                    <p class="title">Bạn chưa đăng nhập?</p>
+                    <p>Hãy đăng nhập để sử dụng chức năng này nhé.</p>
+                    <button class="btnLogin" > Đăng nhập</button>
+                  </div>
+                </div>
+              </a>
+              <a id="likeInfo_btndislike" class="btndislike" title="Không thích video">
+                <span class="icon-webs dislikeicon" ></span>
+                <span class="totalDislike">0</span>
+                <div class="wrapbox">
+                  <div class="arrow_box forgotLoginbox">
+                    <p class="title">Bạn chưa đăng nhập?</p>
+                    <p>Hãy đăng nhập để sử dụng chức năng này nhé.</p>
+                    <button class="btnLogin" > Đăng nhập</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="clear"></div>
           </div>
-
-
-          <div class="shareSocial">
-            <a class="sharethisvideo"><span class="icon-webs shareicon"></span>Chia sẻ</a>
+          <div class="share-bytools">
+            <div class="sharing" id="vfsharefb">
+              <a href="#" id="btshfb" data-href="http://videofly.vn{{videoDetail.shortUrl}}"> <span class="icon-webs sharefbicon"></span>Chia sẻ</a>
+              <a href="#" id="btsendfb" data-href="http://videofly.vn{{videoDetail.shortUrl}}"><span class="icon-webs sendfbicon"></span>Gửi tặng</a>
+            </div>
+            <div class="video-meta">
+              <p class="embedbtn" id="embedbtn"><span class="icon-webs embedicon"></span> Mã nhúng</p>
+            </div>
+            <div class="clear"></div>
           </div>
-
-
-          <div class="likeActivity">
-            <a class="btnlike " title="Thích video">
-              <span class="icon-webs likeicon"></span>
-               <span class="totalLike">0</span>
-            </a>
-            <a class="btndislike" title="Không thích video">
-              <span class="icon-webs dislikeicon"></span>
-              <span class="totaldisLike">0</span>
-            </a>
+  
+          <div class="description">
+            <p class="published-date">Ngày đăng: <span>{{videoDetail.createTs | date:'dd/MM/yyyy'}}</span></p>
+            <p class="category"> Chuyên mục: 
+              <span *ngFor= "let subCatelogory of videoDetail.subCategories"> 
+                <a href="/subCatelogory.pathName/subCatelogory.pathName">{{subCatelogory.cateName}}</a> 
+              </span> 
+            </p>
+            <p class="tags"> Thẻ: 
+              <span *ngFor="let tag of videoDetail.tags;last as isLast"> 
+                <a href="{{tag}}" rel="tag">{{tag}}</a><span *ngIf="!isLast">,</span>
+              </span>
+            </p>
+            <p class="video-desc">{{ videoDetail.description }}</p>
+            <a class="viewMore"> Xem thêm </a>
           </div>
-
-          <div class="clear"></div>
-        </div>
-
-        <div class="share-bytools">
-          <div class="sharing" id="vfsharefb">
-            <a href="#" id="btshfb"> <span class="icon-webs sharefbicon"></span> Chia sẻ</a>
-            <a href="#" id="btsendfb"><span class="icon-webs sendfbicon"></span>Gửi tặng</a>
-          </div>
-          <div class="video-meta">
-            <p class="embedbtn"><span class="icon-webs embedicon"></span> Mã nhúng</p>
-          </div>
-          <div class="clear"></div>
-        </div>
-
-        <div class="description">
-          <p class="published-date">Ngày đăng: <span>{{videoDetail.createTs}}</span></p>
-          <p class="category"> Chuyên mục: 
-            <span *ngFor= "let subCatelogory of videoDetail.subCategories"> 
-              <a href="/subCatelogory.pathName/subCatelogory.pathName">{{subCatelogory.cateName}}</a> 
-            </span> 
-          </p>
-          <p class="tags"> Chủ đề: <span> <a href="#">2012</a>, <a href="">i swear</a> , <a href="#"> it's the truth redemption rob baird</a> </span>            </p>
-          <p class="video-desc">{{ videoDetail.description }}</p>
-          <a class="viewMore"> Xem thêm </a>
-        </div>
-        <!-- description -->
-      </div>
-      <!-- introduceVideo -->
+        </div> <!-- introduceVideo -->
       <div class="section comments" id="video-comments">
         <header class="subTitelsection">
           <h3 class="title">BÌNH LUẬN</h3>
@@ -164,6 +195,8 @@
     <!-- mainContent -->
     <app-suggestvideo></app-suggestvideo>
     <div class="clear"></div>
+		<input type="hidden" value="{{videoDetail.videoId}}" id="video-playing-video-id"/>
+		<input type="hidden" value="{{videoDetail.videoId}}" id="video-playing-video-id-change-playnextvideo"/>
   </div>
   <!-- container -->
 </div>
