--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import "assets/css/_customer";
 @import "assets/css/_iconwebs";
+@import "assets/css/relationvideo";
 @import url(/assets/css/jquery.bxslider.css);
 @import url(/assets/css/recommendation.css);
 @import url(/assets/css/filtrify.css);
