Add structures: section, item,.....

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -72,7 +72,7 @@
           <li><a routerLink="kien-thuc" title="Kiến thức">Kiến thức </a></li>
           <li><a routerLink="tin-tuc" title="Tin tức">Tin tức </a></li>
           <li><a routerLink="cong-dong" title="Cộng đồng">Cộng đồng </a></li>
-
+          <li><a routerLink="video" title="Âm nhạc">Video </a></li>
         </ul>
       </nav>
 
