--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -2,12 +2,12 @@
   <div class="container">
       <div class="wrap-banner">
           <article class="video videoPlaylist vf-suggest-playlist" >
-            <div class="big-thumbnail" style="background-image: url(images/Dinner.jpg)" >							
+            <div class="big-thumbnail" style="background-image: url(/assets/images/Dinner.jpg)" >							
               <a title="Today top hits" rel="bookmark" href="#">	
   
               </a>
             </div>
-            <p class="thumbnail" style="background-image: url(images/Dinner.jpg)">
+            <p class="thumbnail" style="background-image: url(/assets/images/Dinner.jpg)">
               <a title="Today top hits" rel="bookmark" href="#">	
                 <span class="playitems">
                   <span class="icon-webs playicon"></span>								
@@ -27,23 +27,50 @@
                                         
                   </header>
                   <div class="vf-desc-playlist">
-                    <a href="#">Đàm tiếu về những sự kiện nóng hổi trong showbiz Việt một cách chân thật thẳng thắn nhưng cũng rất hài hước.
-    Nội dung thường xoay quanh những sự kiện nổi bật trong showbiz</a>
+                    <a href="#">Đàm tiếu về những sự kiện nóng hổi</a>
                     
                   </div>
                   
                 </div>
-                
               </div>
-              
             </div>			
-            
-          </article>
-          
-        </div> <!-- newListvideo -->
+        </article>
+      </div> <!-- newListvideo -->
 
+      <div class="sectioncontent vf-following-playlist">
+        <header class="menuSection">
+          <h2 class="title">
+            Playlist theo dõi
+          </h2>
+        </header>
+        <ul class="bxslider">
+          <li>
+            <article class="video videoPlaylist">
+              <a href="1">
+                <p style="background-image: url('/assets/images/thumbnail.jpg')" class="thumbnail">
+                  <span class="playitems">
+                    <span class="icon-webs playicon"></span>								
+                  </span>
+                </p> 
+                <header class="meta">
+                  <h3 class="title">Nhân tố bí ẩn</h3>
+                </header>
+              </a>
+            </article>
+          </li>
+        </ul>
+      </div> <!-- sectioncontent -->	
 
-
-
+      <div class="section sectioncontent listVideo entertainmentSection newsSection">
+          <header class="menuSection">
+            <h2 class="title">
+              <a title="" href="#">AAAA</a>
+            </h2>
+          </header>
+          <div class="listvideo introNews" zone-id="homepage-scheduled">
+            				
+          </div>
+          <!-- listvideo -->
+        </div> 
   </div>
 </div>
