--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -64,7 +64,7 @@
       <div class="section sectioncontent listVideo entertainmentSection newsSection">
           <header class="menuSection">
             <h2 class="title">
-              <a title="" href="#">AAAA</a>
+              <a title="" href="#">AAAA</a>1
             </h2>
           </header>
           <div class="listvideo introNews" zone-id="homepage-scheduled">
