--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -55,13 +55,13 @@
     <div class="container">
       <nav id="navigation" class="menu-main-menu-container">
         <ul id="menu-main-menu" class="channels wrapper">
-          <li class="active home">
-            <a routerLink="" [routerLinkActive]="['router-link-active']" title="Trang chủ">Trang chủ</a>
+          <li routerLink="" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }" title="Trang chủ">
+            <a  >Trang chủ</a>
           </li>
 
-          <li><a routerLink="am-nhac" title="Âm nhạc">Âm nhạc </a></li>
-          <li>
-            <a routerLink="giai-tri" title="Giải trí">Giải trí </a>
+          <li routerLink="am-nhac" [routerLinkActive]="['active']"><a title="Âm nhạc">Âm nhạc </a></li>
+          <li routerLink="giai-tri" [routerLinkActive]="['active']" title="Giải trí">
+            <a>Giải trí </a>
             <ul>
               <li><a href="#">Hài</a> </li>
               <li><a href="#">TV Show</a> </li>
@@ -69,10 +69,10 @@
               <li><a href="#">Sitcom</a> </li>
             </ul>
           </li>
-          <li><a routerLink="kien-thuc" [routerLinkActive]="['router-link-active']" title="Kiến thức">Kiến thức </a></li>
-          <li><a routerLink="tin-tuc" [routerLinkActive]="['router-link-active']" title="Tin tức">Tin tức </a></li>
-          <li><a routerLink="cong-dong" [routerLinkActive]="['router-link-active']" title="Cộng đồng">Cộng đồng </a></li>
-          <li><a routerLink="video" [routerLinkActive]="['router-link-active']" title="Âm nhạc">Video </a></li>
+          <li routerLink="kien-thuc" [routerLinkActive]="['active']" title="Kiến thức"><a >Kiến thức </a></li>
+          <li routerLink="tin-tuc" [routerLinkActive]="['active']" atitle="Tin tức"><a >Tin tức </a></li>
+          <li routerLink="cong-dong" [routerLinkActive]="['active']" title="Cộng đồng"><a >Cộng đồng </a></li>
+          <li routerLink="video" [routerLinkActive]="['active']" title="Âm nhạc"><a >Video </a></li>
         </ul>
       </nav>
 
