Add some template

--- a/src/app/shared/components/items/playlistitem/playlistitem.component.html
+++ b/src/app/shared/components/items/playlistitem/playlistitem.component.html
@@ -1,3 +1,47 @@
-<p>
-  playlistitem works!
-</p>
+<article class="playlistitems" >
+    <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
+      <a title="Weekend Buzz" rel="bookmark" href="#">			
+      </a>
+      <span class="playitems">
+        <span class="icon-webs playicon"></span>								
+      </span>	
+      <button class="vf-followplbtn" title="Theo dõi playlist">
+        <span class=" followpl-icon">
+            <i class="fa fa-star-o" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+        </span> 	
+      </button>														
+    </p>
+    <header class="meta">
+      <h3 class="title">
+        <a title="Weekend Buzz" rel="bookmark" href="#"> Heartbreaker </a>
+      </h3>												
+    </header>
+    <p class="uploader">
+      <a title="videofly" href="#">Video fly</a>
+      <span class="vf-confirm" title="Đã xác nhận">
+        <i class="fa fa-check-square" aria-hidden="true"></i>
+      </span>
+    </p>
+    <div class="desc-intro">
+      <p>
+      Cựu tiền vệ HAGL vẫn như không tin khi được khoác chiếc áo của CLB danh tiếng Incheon United, Hàn Quốc.</p>
+    </div>
+    <ul>
+      <li title="Lượt xem" class="watch-count">
+              <span class="fonticons"><span class="icon-eye"></span></span>
+              3K
+            </li>
+      <li title="Số video" class="videoTotal">
+              <span class="fonticons"><span class="icon-film"></span></span>
+              30							
+            </li>
+      <li class="rating">
+        <span class="fullstar fonticons"><i class="fa fa-star" aria-hidden="true"></i></span>
+        <span class="fullstar fonticons"><i class="fa fa-star" aria-hidden="true"></i></span>
+        <span class="halfstar fonticons"><i class="fa fa-star-half-o" aria-hidden="true"></i></span>
+        <span class="emptystar fonticons"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+        <span class="emptystar fonticons"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+      </li> 	
+    </ul>
+  </article>
