--- a/src/app/shared/components/items/videoitem/videoitem.component.html
+++ b/src/app/shared/components/items/videoitem/videoitem.component.html
@@ -1,3 +1,24 @@
-<p>
-  videoitem works!
-</p>
+<article class="video" >
+  <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
+    <a title="Lorem Ipsum is simply dummy text of the printing and typesetting industry." rel="bookmark" href="#">											
+    </a>
+    <span class="duration">17:30</span>
+    
+  </p>
+  <header class="meta">
+    <h3 class="title">
+      <a title="Lorem Ipsum is simply dummy text of the printing and typesetting industry." rel="bookmark" href="#"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </a>
+    </h3>	
+    <p class="uploader">
+      <a title="videofly" href="#">Video fly</a>
+    </p>
+    <ul>
+      <li class="watch-count">
+        3K lượt xem
+      </li>
+      <li class="datetime">
+        3 ngày trước
+      </li>
+    </ul>						
+  </header>
+</article>
