--- a/src/app/shared/components/section/splaylist/splaylist.component.html
+++ b/src/app/shared/components/section/splaylist/splaylist.component.html
@@ -1,3 +1,11 @@
-<p>
-  splaylist works!
-</p>
+
+  <div  class="listplaylists">
+      <app-playlistitem></app-playlistitem>
+      <app-playlistitem></app-playlistitem>
+      <app-playlistitem></app-playlistitem>
+      <app-playlistitem></app-playlistitem>
+  </div>
+    
+ 	
+
+
