--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,9 @@
 @import "assets/css/_iconwebs";
 @import "assets/css/_bigthumb";
 @import "assets/css/relationvideo";
+@import "assets/css/partial/_slidesPlaylist";
+@import "assets/css/partial/_blockplaylists";
+
 @import url(/assets/css/jquery.bxslider.css);
 @import url(/assets/css/recommendation.css);
 @import url(/assets/css/filtrify.css);
