--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -19,6 +19,64 @@
 		}
 	}	 
 
+	::ng-deep 
+	{
+		.playlistitems
+		{
+			width: 196px;
+			height: 196px;
+			float: left;
+			overflow: hidden;
+			position: relative;			
+			margin: 0 6px;
+			margin-bottom: 10px;
+			
+			.meta
+			{
+				position: $position-absolute;
+				left: 0;
+				width: 100%;
+				padding: 15px 5px 5px;
+				bottom:0;	
+				background: #000;	
+				margin: 0;
+				.title
+				{
+					z-index: 100;	
+					display: block;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+					text-shadow: 1px 1px 3px #000;	
+					font-weight: bold;
+					line-height: 16px;
+					@include styleText(#ffffff, 15px);
+					a 
+					{
+						z-index: 100;	
+						display: block;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+						text-shadow: 1px 1px 3px #000;	
+						font-weight: bold;
+						line-height: 16px;
+						@include styleText(#ffffff, 15px);
+					}
+					
+				}
+			}
+			.uploader, .desc-intro
+			{
+				display: none;
+			}
+			>ul 
+			{
+				display: none;
+			}
+		}
+	}
+
 	/* section 1 */
 	.newListvideo 
 	{
