Fix can't add splaylist component into homepage

--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -98,7 +98,7 @@ Nội dung thường xoay quanh những sự kiện nổi bật trong showbiz, p
         </ul>
       </header>
      
-      <!-- <app-splaylist></app-splaylist> -->
+      <app-splaylist></app-splaylist>
 
     </div><!-- section -->
 
