--- a/src/app/shared/components/items/playlistitem/playlistitem.component.html
+++ b/src/app/shared/components/items/playlistitem/playlistitem.component.html
@@ -15,6 +15,7 @@
     <header class="meta">
       <h3 class="title">
         <a title="Weekend Buzz" rel="bookmark" href="#"> Heartbreaker </a>
+        <span class="update-time">Hôm qua </span>
       </h3>												
     </header>
     <p class="uploader">
