--- a/src/app/shared/components/items/videoitem/videoitem.component.html
+++ b/src/app/shared/components/items/videoitem/videoitem.component.html
@@ -1,6 +1,7 @@
 <article class="video" >
   <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-    <a title="Lorem Ipsum is simply dummy text of the printing and typesetting industry." rel="bookmark" href="#">											
+    <a title="Lorem Ipsum is simply dummy text of the printing and typesetting industry." rel="bookmark" href="#">	
+        <!-- <span class="vf-vietsub"><span> <span class="icon-webs vietsubbg">Viet sub</span></span></span>										 -->
     </a>
     <span class="duration">17:30</span>
     
