--- a/src/app/shared/components/section/splaylist-slide/splaylist-slide.component.html
+++ b/src/app/shared/components/section/splaylist-slide/splaylist-slide.component.html
@@ -1,3 +1,7 @@
-<p>
-  splaylist-slide works!
-</p>
+<div class="listvideo hotPlaylistvideo">
+    <ul class="bxslider">
+        <li>		
+            <app-playlistitem></app-playlistitem>			 	
+        </li>
+    </ul>
+</div>
