--- a/src/app/shared/components/section/splaylist/splaylist.component.html
+++ b/src/app/shared/components/section/splaylist/splaylist.component.html
@@ -1,5 +1,14 @@
 
   <div  class="listplaylists">
+    
+      <app-playlistitem></app-playlistitem>
+      <app-playlistitem></app-playlistitem>
+      <app-playlistitem></app-playlistitem>
+      <app-playlistitem></app-playlistitem>
+      <app-playlistitem></app-playlistitem>
+      <app-playlistitem></app-playlistitem>
+      <app-playlistitem></app-playlistitem>
+      <app-playlistitem></app-playlistitem>
       <app-playlistitem></app-playlistitem>
       <app-playlistitem></app-playlistitem>
       <app-playlistitem></app-playlistitem>
