--- a/src/app/shared/components/section/svideo/svideo.component.html
+++ b/src/app/shared/components/section/svideo/svideo.component.html
@@ -1,3 +1,15 @@
-<p>
-  svideo works!
-</p>
+<div class="listvideos">
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+    <app-videoitem></app-videoitem>
+ 
+  </div>
