--- a/src/app/modules/entertainment-page/entertainment-page.component.html
+++ b/src/app/modules/entertainment-page/entertainment-page.component.html
@@ -41,67 +41,67 @@
               <h2> VideoFly Giới Thiệu</h2>
           </header> -->
 
-          <div class="section  vf-newupdatemusic-section">
-      <header class="menuSection">
-        <h3 class="title">
-          <a href="#" title="Mới cập nhật">Mới cập nhật</a>	
-        </h3>					
-      </header>
-
-      <div class="listvideo hotPlaylistvideo">
-          <ul class="bxslider">
-              <li>					 	
-                 <article class="playlistitems" >
-                     <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-                       <a title="Weekend Buzz" rel="bookmark" href="#">			
-                       </a>
-                       <span class="playitems">
-                         <span class="icon-webs playicon"></span>								
-                       </span>	
-                       <button class="vf-followplbtn" title="Theo dõi playlist">
-                         <span class=" followpl-icon">
-                             <i class="fa fa-star-o" aria-hidden="true"></i>
-                             <i class="fa fa-star" aria-hidden="true"></i>
-                         </span> 	
-                       </button>														
-                     </p>
-                     <header class="meta">
-                       <h3 class="title">
-                         <a title="Weekend Buzz" rel="bookmark" href="#"> Heartbreaker </a>
-                       </h3>												
-                     </header>
-                     <p class="uploader">
-                       <a title="videofly" href="#">Video fly</a>
-                       <span class="vf-confirm" title="Đã xác nhận">
-                         <i class="fa fa-check-square" aria-hidden="true"></i>
-                       </span>
-                     </p>
-                     <div class="desc-intro">
-                       <p>
-                       Cựu tiền vệ HAGL vẫn như không tin khi được khoác chiếc áo của CLB danh tiếng Incheon United, Hàn Quốc.</p>
-                     </div>
-                     <ul>
-                       <li title="Lượt xem" class="watch-count">
-                               <span class="fonticons"><span class="icon-eye"></span></span>
-                               3K
-                             </li>
-                       <li title="Số video" class="videoTotal">
-                               <span class="fonticons"><span class="icon-film"></span></span>
-                               30							
-                             </li>
-                       <li class="rating">
-                         <span class="fullstar fonticons"><i class="fa fa-star" aria-hidden="true"></i></span>
-                         <span class="fullstar fonticons"><i class="fa fa-star" aria-hidden="true"></i></span>
-                         <span class="halfstar fonticons"><i class="fa fa-star-half-o" aria-hidden="true"></i></span>
-                         <span class="emptystar fonticons"><i class="fa fa-star-o" aria-hidden="true"></i></span>
-                         <span class="emptystar fonticons"><i class="fa fa-star-o" aria-hidden="true"></i></span>
-                       </li> 	
-                     </ul>
-                   </article>
-              </li>
-              </ul>
-      </div>
-    </div><!-- section -->
+      <div class="section  vf-newupdatemusic-section">
+        <header class="menuSection">
+          <h3 class="title">
+            <a href="#" title="Mới cập nhật">Mới cập nhật</a>	
+          </h3>					
+        </header>
+        <!-- <app-splaylist-slide></app-splaylist-slide> -->
+        <!-- <div class="listvideo hotPlaylistvideo">
+            <ul class="bxslider">
+                <li>					 	
+                  <article class="playlistitems" >
+                      <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
+                        <a title="Weekend Buzz" rel="bookmark" href="#">			
+                        </a>
+                        <span class="playitems">
+                          <span class="icon-webs playicon"></span>								
+                        </span>	
+                        <button class="vf-followplbtn" title="Theo dõi playlist">
+                          <span class=" followpl-icon">
+                              <i class="fa fa-star-o" aria-hidden="true"></i>
+                              <i class="fa fa-star" aria-hidden="true"></i>
+                          </span> 	
+                        </button>														
+                      </p>
+                      <header class="meta">
+                        <h3 class="title">
+                          <a title="Weekend Buzz" rel="bookmark" href="#"> Heartbreaker </a>
+                        </h3>												
+                      </header>
+                      <p class="uploader">
+                        <a title="videofly" href="#">Video fly</a>
+                        <span class="vf-confirm" title="Đã xác nhận">
+                          <i class="fa fa-check-square" aria-hidden="true"></i>
+                        </span>
+                      </p>
+                      <div class="desc-intro">
+                        <p>
+                        Cựu tiền vệ HAGL vẫn như không tin khi được khoác chiếc áo của CLB danh tiếng Incheon United, Hàn Quốc.</p>
+                      </div>
+                      <ul>
+                        <li title="Lượt xem" class="watch-count">
+                                <span class="fonticons"><span class="icon-eye"></span></span>
+                                3K
+                              </li>
+                        <li title="Số video" class="videoTotal">
+                                <span class="fonticons"><span class="icon-film"></span></span>
+                                30							
+                              </li>
+                        <li class="rating">
+                          <span class="fullstar fonticons"><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span class="fullstar fonticons"><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span class="halfstar fonticons"><i class="fa fa-star-half-o" aria-hidden="true"></i></span>
+                          <span class="emptystar fonticons"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                          <span class="emptystar fonticons"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                        </li> 	
+                      </ul>
+                    </article>
+                </li>
+                </ul>
+        </div> -->
+      </div><!-- section -->
     
     <div class="section  vf-newmusic-section">
       <header class="menuSection">
@@ -112,55 +112,9 @@
 
       <div class="listvideo hotPlaylistvideo">
           <ul class="bxslider">
-              <li>					 	
-                 <article class="playlistitems" >
-                     <p class="thumbnail" style="background-image: url(../assets/images/thumb-larger.jpg)">
-                       <a title="Weekend Buzz" rel="bookmark" href="#">			
-                       </a>
-                       <span class="playitems">
-                         <span class="icon-webs playicon"></span>								
-                       </span>	
-                       <button class="vf-followplbtn" title="Theo dõi playlist">
-                         <span class=" followpl-icon">
-                             <i class="fa fa-star-o" aria-hidden="true"></i>
-                             <i class="fa fa-star" aria-hidden="true"></i>
-                         </span> 	
-                       </button>														
-                     </p>
-                     <header class="meta">
-                       <h3 class="title">
-                         <a title="Weekend Buzz" rel="bookmark" href="#"> Heartbreaker </a>
-                       </h3>												
-                     </header>
-                     <p class="uploader">
-                       <a title="videofly" href="#">Video fly</a>
-                       <span class="vf-confirm" title="Đã xác nhận">
-                         <i class="fa fa-check-square" aria-hidden="true"></i>
-                       </span>
-                     </p>
-                     <div class="desc-intro">
-                       <p>
-                       Cựu tiền vệ HAGL vẫn như không tin khi được khoác chiếc áo của CLB danh tiếng Incheon United, Hàn Quốc.</p>
-                     </div>
-                     <ul>
-                       <li title="Lượt xem" class="watch-count">
-                               <span class="fonticons"><span class="icon-eye"></span></span>
-                               3K
-                             </li>
-                       <li title="Số video" class="videoTotal">
-                               <span class="fonticons"><span class="icon-film"></span></span>
-                               30							
-                             </li>
-                       <li class="rating">
-                         <span class="fullstar fonticons"><i class="fa fa-star" aria-hidden="true"></i></span>
-                         <span class="fullstar fonticons"><i class="fa fa-star" aria-hidden="true"></i></span>
-                         <span class="halfstar fonticons"><i class="fa fa-star-half-o" aria-hidden="true"></i></span>
-                         <span class="emptystar fonticons"><i class="fa fa-star-o" aria-hidden="true"></i></span>
-                         <span class="emptystar fonticons"><i class="fa fa-star-o" aria-hidden="true"></i></span>
-                       </li> 	
-                     </ul>
-                   </article>
-              </li>
+              <li>	
+                  <!-- <app-playlistitem></app-playlistitem>					 	 -->
+                </li>
             </ul>
       </div>
     </div><!-- section -->
