--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -24,13 +24,7 @@
 		.playlistitems
 		{
 			width: 196px;
-			height: 196px;
-			float: left;
-			overflow: hidden;
-			position: relative;			
-			margin: 0 6px;
-			margin-bottom: 10px;
-			
+			height: 196px;		
 			.meta
 			{
 				position: $position-absolute;
@@ -85,6 +79,11 @@
 		margin-bottom: 20px;
 		.vf-suggest-playlist
 		{
+			float: left;
+			overflow: hidden;
+			position: relative;			
+			margin: 0 5px;
+			margin-bottom: 10px;
 			@include sizeVideo(612px, 344px);
 			margin-left: 0;	
 			.big-thumbnail
@@ -118,6 +117,23 @@
 				bottom: 0;
 				left: 60px;
 				margin: auto;
+				background-position: 50% 50%;
+				background-repeat: no-repeat;
+				background-size: cover;
+				display: block;
+				a  
+				{
+					display: block;
+					height: 100%;
+					width: 100%;
+				}
+				&:hover 
+				{
+					a .playitems
+					{
+						opacity: 1;
+					}
+				}
 				.videoTotal
 				{
 					display: none;
@@ -228,81 +244,45 @@
 				}
 			}
 		}
-		.video 
+		app-videoitem 
 		{
+			float: left;
+			margin: 0 6px;
+			margin-bottom: 10px;
+			&:nth-child(4), &:nth-child(7)  
+			{
+				margin-right: 0;
+			}
 			&:nth-child(n+8) 
 			{
 				display: $display-none;
 			}
-			&.vf-suggest-playlist-unauto
-			{				
-    			@include sizeVideo(612px, 344px);
-    			margin-left: 0;			
-				.thumbnail 
-				{					
-					@include sizeVideo(100%, 344px);
-					.duration
-					{
-						display: $display-none;
-					}
-				}
-				.meta 
+			::ng-deep
+			{
+				.video 
 				{
-					padding: 5px 10px;
-					padding-top: 10px;
-					position: $position-absolute;
-					left: 0;
-					bottom:0;
-					width: 100%;
-					background: #000;
-					background: -webkit-linear-gradient(to bottom, rgba(255, 255, 255, 0) 0px, rgba(255, 255, 255, 0.01) 2%, rgba(0, 0, 0, 0.01) 3%, rgba(0, 0, 0, 0.04) 11%, rgba(0, 0, 0, 0.51) 33%, rgba(0, 0, 0, 0.8) 73%, rgba(0, 0, 0, 0.9) 100%); /* For Safari 5.1 to 6.0 */
-				    background: -o-linear-gradient(to bottom, rgba(255, 255, 255, 0) 0px, rgba(255, 255, 255, 0.01) 2%, rgba(0, 0, 0, 0.01) 3%, rgba(0, 0, 0, 0.04) 11%, rgba(0, 0, 0, 0.51) 33%, rgba(0, 0, 0, 0.8) 73%, rgba(0, 0, 0, 0.9) 100%);/* For Opera 11.1 to 12.0 */
-				    background: -moz-linear-gradient(to bottom, rgba(255, 255, 255, 0) 0px, rgba(255, 255, 255, 0.01) 2%, rgba(0, 0, 0, 0.01) 3%, rgba(0, 0, 0, 0.04) 11%, rgba(0, 0, 0, 0.51) 33%, rgba(0, 0, 0, 0.8) 73%, rgba(0, 0, 0, 0.9) 100%); /* For Firefox 3.6 to 15 */
-				    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0px, rgba(255, 255, 255, 0.01) 2%, rgba(0, 0, 0, 0.01) 3%, rgba(0, 0, 0, 0.04) 11%, rgba(0, 0, 0, 0.51) 33%, rgba(0, 0, 0, 0.8) 73%, rgba(0, 0, 0, 0.9) 100%); /* Standard syntax (must be last) */
-					
-					.title
-					{
-						float: left;
-						width: 70%;	
-						font-size: 18px;
-						height: 48px;
-						max-height: 44px;						
-						a 
+					float: none;
+					margin: 0;
+					.meta 
+					{				
+						.title 
 						{
-							line-height: 22px;
-							font-size: 18px;
-							@include styleText(#ffffff, 18px);
-							.playlisticon 
+							a 
 							{
-								display: $display-none;
+								color: #2b2b2b;						
 							}
-						}										
+						}				
 					}
-					.uploader,ul
+					.desc-ct
 					{
-						display: $display-none;
-					}					
-				}
-				.videoTotal
-				{
-					display: $display-none;
+						display: none;
+					}	
 				}
 			}
 			
-			.meta 
-			{				
-				.title 
-				{
-					a 
-					{
-						color: #2b2b2b;						
-					}
-				}				
-			}
-			.desc-ct
-			{
-				display: none;
-			}				
+			
+			
+						
 		}
 		
 
@@ -312,122 +292,42 @@
 		border: none;
 		margin-top: 30px;
 		overflow: inherit;	
-		.bx-wrapper
+		::ng-deep
 		{
-			margin-left: 0;
-		}	
-		.bx-wrapper .bx-prev
-		{
-			left: -24px;
+			.bx-wrapper
+			{
+				margin-left: 0;
+				 .bx-prev
+				{
+					left: -24px;
+				}
+				 .bx-next
+				{
+					right: -32px;
+				}
+			}	
+			
 		}
-		.bx-wrapper .bx-next
-		{
-			right: -38px;
-		}
+		
 		.menuSection
 		{
 			.title 
 			{
 				font-size: 16px;
 				color: #eb4335;
-			}
-		}
-		.videoPlaylist
-		{
-			float: $float-left;	
-			width: 196px;
-			height: 196px;
-			padding: 0;
-			margin: 0;
-			// margin: 0 6px 12px;						
-			>a 
-			{
-				display: $display-block;
-				position: $position-relative;
-				height: 100%;
-				background-color: #e5e6ec ;
-				.thumbnail
+				a 
 				{
-					width: 196px;
-					height: 196px;
-					&::before 
-					{
-						background: rgba(0, 0, 0, 0.4);
-						opacity: 0;
-						position: $position-absolute;
-						left: 0;
-						top:0;
-						width: 100%;
-						height: 100%;
-						z-index: 10;
-						content: '';
-						-webkit-transition: opacity 0.2s;
-						-moz-transition: opacity 0.2s;
-						-ms-transition: opacity 0.2s;
-						-o-transition: opacity 0.2s;
-						transition: opacity 0.2s;
-
-					}
-				}
-				&:hover 
-				{
-					.thumbnail::before 
-					{
-						opacity: 1;
-					}
-				}
-				.meta
-				{
-					bottom: 0;
-				    left: 0;
-				    z-index: 11;
-				    padding: 10px 9px 5px;
-				    position: absolute;
-				    width: 100%;
-				    background: #000;
-					background: -webkit-linear-gradient(to bottom, rgba(255, 255, 255, 0) 0px, rgba(255, 255, 255, 0.01) 2%, rgba(0, 0, 0, 0.01) 3%, rgba(0, 0, 0, 0.04) 11%, rgba(0, 0, 0, 0.51) 33%, rgba(0, 0, 0, 0.8) 73%, rgba(0, 0, 0, 0.9) 100%); /* For Safari 5.1 to 6.0 */
-				    background: -o-linear-gradient(to bottom, rgba(255, 255, 255, 0) 0px, rgba(255, 255, 255, 0.01) 2%, rgba(0, 0, 0, 0.01) 3%, rgba(0, 0, 0, 0.04) 11%, rgba(0, 0, 0, 0.51) 33%, rgba(0, 0, 0, 0.8) 73%, rgba(0, 0, 0, 0.9) 100%);/* For Opera 11.1 to 12.0 */
-				    background: -moz-linear-gradient(to bottom, rgba(255, 255, 255, 0) 0px, rgba(255, 255, 255, 0.01) 2%, rgba(0, 0, 0, 0.01) 3%, rgba(0, 0, 0, 0.04) 11%, rgba(0, 0, 0, 0.51) 33%, rgba(0, 0, 0, 0.8) 73%, rgba(0, 0, 0, 0.9) 100%); /* For Firefox 3.6 to 15 */
-				    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0px, rgba(255, 255, 255, 0.01) 2%, rgba(0, 0, 0, 0.01) 3%, rgba(0, 0, 0, 0.04) 11%, rgba(0, 0, 0, 0.51) 33%, rgba(0, 0, 0, 0.8) 73%, rgba(0, 0, 0, 0.9) 100%); /* Standard syntax (must be last) */
-					.title
-					{
-						@include styleText(#ffffff, 15px);
-						line-height: 16px;
-						@extend %styleinline;
-						font-weight: bold;
-						margin-bottom: 0;
-						&:hover 
-						{
-							text-decoration: underline;
-						}
-					}
-					.watch-count
-					{
-						@include styleText(#bbbdc1, 13px);
-						line-height: 13px;	
-						@extend %styleinline;
-					}
+					color: #707378;
+					font-size: 22px;
+					font-family: Arial;
+					text-align: left;
+					display: block;
 				}
 			}
-			
 		}
+		
 	}
-	.vf-musicSection
-	{
-		.listvideo 
-		{
-			.videotopic 
-			{
-				.wraptitle
-				{
-					.titletoppic
-					{
-						display: none;
-					}
-				}
-			}
-		}
-	}
+	
 	.transportSection
 	{
 		border-bottom: none;
@@ -468,107 +368,34 @@
 
 	.sectioncontent
 	{
-		.menuSection
+		&.newsSection
 		{
-			.submenu
+			::ng-deep
 			{
-				li 
+				.playlistitems
 				{
-					padding: 0 3px;
-					a 
+					.update-time 
 					{
-						background: #dcdde3;
-						border-radius: 3px;
-					}
-				}
-				li.activesubmenu 
-				{
-					a 
-					{
-						background: #eb4335 ;
-					    border-radius: 3px;
-					    color: #fff;
-					    &:hover 
-					    {
-					    	text-decoration: none !important;
-					    }
+						display: block;
+						@include styleText(#bbbdc1, 12px);
+						font-weight: normal;
+						z-index: 100;
+						display: block;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+						text-shadow: 1px 1px 3px #000;
+						font-weight: normal;
+					
 					}
 				}
 			}
+
 		}
+	
 	} 
 
-	.sectioncontent 
-	{
-		.listvideo
-		{
-			.videotopic 
-			{
-				width: 196px ;
-				height: 196px ;				
-				.thumbnail 
-				{
-					 height: 100% ;
-   					 width: 100%;
-   					 a 
-   					 {
-   					 	position: $position-relative;
-   					 }
-				}	
-
-				.wraptitle
-				{
-					position: $position-absolute;
-					left: 0;
-					width: 100%;
-					padding: 15px 5px 5px;
-					bottom:0;	
-					background: #000;					
-				    background: -webkit-linear-gradient(to bottom, rgba(0,0,0,0) 15%, rgba(0,0,0,0.11) 26%, rgba(0,0,0,0.63) 81%, rgba(0,0,0,0.65) 83%);
-				    background: -o-linear-gradient(to bottom, rgba(0,0,0,0) 15%, rgba(0,0,0,0.11) 26%, rgba(0,0,0,0.63) 81%, rgba(0,0,0,0.65) 83%);
-				    background:-moz-linear-gradient(to bottom, rgba(0,0,0,0) 15%, rgba(0,0,0,0.11) 26%, rgba(0,0,0,0.63) 81%, rgba(0,0,0,0.65) 83%); /* FF3.6-15 */
-				    background: linear-gradient(to bottom, rgba(0,0,0,0) 15%, rgba(0,0,0,0.11) 26%, rgba(0,0,0,0.63) 81%, rgba(0,0,0,0.65) 83%);
-					 .update-time
-					{
-						
-						@include styleText(#bbbdc1, 12px);
-						z-index: 100;	
-					    display: block;
-					    overflow: hidden;
-					    text-overflow: ellipsis;
-					    white-space: nowrap;
-					    text-shadow: 1px 1px 3px #000;	
-					    font-weight: normal;				    
-					}	
-					.titletoppic
-					{
-						@extend .update-time;
-						@include styleText(#ffffff, 13px);
-						line-height: 18px;
-						font-weight: bold;
-						a 
-						{
-							@include styleText(#ffffff, 13px);
-						}						
-					}
-				}
-
-				&:hover 
-				{
-					.wraptitle
-					{
-						.titletoppic
-						{
-							text-overflow : initial;
-							 white-space: normal;
-							 max-height: 40px;							 
-						}
-					}
-				}	
-
-			}
-		}
-	}
+	
 
 	
 }
