Create share components module

--- a/src/app/modules/entertainment-page/entertainment-page.component.html
+++ b/src/app/modules/entertainment-page/entertainment-page.component.html
@@ -47,7 +47,7 @@
             <a href="#" title="Mới cập nhật">Mới cập nhật</a>	
           </h3>					
         </header>
-        <!-- <app-splaylist-slide></app-splaylist-slide> -->
+        <app-splaylist-slide></app-splaylist-slide>
         <!-- <div class="listvideo hotPlaylistvideo">
             <ul class="bxslider">
                 <li>					 	
