Add banner slide in entertainment page

--- a/src/app/modules/entertainment-page/entertainment-page.component.html
+++ b/src/app/modules/entertainment-page/entertainment-page.component.html
@@ -15,28 +15,9 @@
     </div>
   </aside>
 
-  <div class="container">
-    <div class="vf-slider">
-      <ul class="category-slider">
-        <li><a href="#">
-          <article>
-            <div class="cover-slider" style="background-image: url(../assets/images/banner1.jpg)"></div>
-          </article>
-        </a></li>	
-
-        <li><a href="#">
-          <article>
-            <div class="cover-slider" style="background-image: url(../assets/images/banner1.jpg)"></div>
-          </article>
-        </a></li>	
-
-        <li><a href="#">
-          <article>
-            <div class="cover-slider" style="background-image: url(../assets/images/banner1.jpg)"></div>
-          </article>
-        </a></li>			 
-      </ul>
-    </div> <!-- vf-slider -->
+  <div class="container">    
+      <app-banner-slide></app-banner-slide>
+    
      <!-- <header class="ttIntroduce">
               <h2> VideoFly Giới Thiệu</h2>
           </header> -->
