--- a/src/app/modules/entertainment-page/entertainment-page.component.html
+++ b/src/app/modules/entertainment-page/entertainment-page.component.html
@@ -15,9 +15,28 @@
     </div>
   </aside>
 
-  <div class="container">    
-      <app-banner-slide></app-banner-slide>
-    
+  <div class="container">
+    <div class="vf-slider">
+      <ul class="category-slider">
+        <li><a href="#">
+          <article>
+            <div class="cover-slider" style="background-image: url(../assets/images/banner1.jpg)"></div>
+          </article>
+        </a></li>	
+
+        <li><a href="#">
+          <article>
+            <div class="cover-slider" style="background-image: url(../assets/images/banner1.jpg)"></div>
+          </article>
+        </a></li>	
+
+        <li><a href="#">
+          <article>
+            <div class="cover-slider" style="background-image: url(../assets/images/banner1.jpg)"></div>
+          </article>
+        </a></li>			 
+      </ul>
+    </div> <!-- vf-slider -->
      <!-- <header class="ttIntroduce">
               <h2> VideoFly Giới Thiệu</h2>
           </header> -->
